src/core-crm/objects/Stewardship__c/Stewardship__c.object-meta.xml
<CustomObject>
    <description>Stewardship captures data around donors who have been identified to be stewarded, by entering into a Stewardship Plan.</description>
    <label>Stewardship</label>
    <nameField>
        <displayFormat>STW-{000000}</displayFormat>
        <label>Stewardship Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stewardships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>