src/core-crm/objects/Stewardship__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Account record.</description>
    <inlineHelpText>Lookup to the Account record.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Stewardships</relationshipLabel>
    <relationshipName>Stewardships</relationshipName>
    <type>Lookup</type>
</CustomField>