src/core-crm/objects/Stewardship__c/fields/Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Close_Date__c</fullName>
    <description>The date the Plan ended.</description>
    <inlineHelpText>The date the Plan ended.</inlineHelpText>
    <label>Close Date</label>
    <type>Date</type>
</CustomField>