src/core-crm/objects/Stewardship__c/fields/Completion_Reason__c.field-meta.xml
<CustomField>
    <fullName>Completion_Reason__c</fullName>
    <description>The reason the Plan has been marked as ‘Completed’.</description>
    <inlineHelpText>The reason the Plan has been marked as ‘Completed’.</inlineHelpText>
    <label>Completion Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>