src/core-crm/objects/Stewardship__c/fields/Completion_Summary__c.field-meta.xml
<CustomField>
    <fullName>Completion_Summary__c</fullName>
    <description>Summary of the Plan Completion outcome.</description>
    <inlineHelpText>Summary of the Plan Completion outcome.</inlineHelpText>
    <label>Completion Summary</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>