src/core-crm/objects/Stewardship__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Contact record.</description>
    <inlineHelpText>Lookup to the Contact record.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Stewardships</relationshipLabel>
    <relationshipName>Stewardships</relationshipName>
    <type>Lookup</type>
</CustomField>