src/core-crm/objects/Stewardship__c/fields/Inactive_Summary__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Summary__c</fullName>
    <description>Summary of why the Plan was marked as ‘Inactive’.</description>
    <inlineHelpText>Summary of why the Plan was marked as ‘Inactive’.</inlineHelpText>
    <label>Inactive Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>