src/core-crm/objects/Stewardship__c/fields/Lost_Summary__c.field-meta.xml
<CustomField>
    <fullName>Lost_Summary__c</fullName>
    <description>Summary of why the Plan was lost.</description>
    <inlineHelpText>Summary of why the Plan was lost.</inlineHelpText>
    <label>Lost Summary</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>