src/core-crm/objects/Stewardship__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>QUT Staff member who is overseeing the Stewardship process.</description>
    <inlineHelpText>QUT Staff member who is overseeing the Stewardship process.</inlineHelpText>
    <label>Manager</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.QUT_Staff__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Stewardships (Manager)</relationshipLabel>
    <relationshipName>Stewardships1</relationshipName>
    <type>Lookup</type>
</CustomField>