src/core-crm/objects/Stewardship__c/fields/Objective__c.field-meta.xml
<CustomField>
    <fullName>Objective__c</fullName>
    <description>The business objective for the Plan.</description>
    <inlineHelpText>The business objective for the Plan.</inlineHelpText>
    <label>Objective</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>