src/core-crm/objects/Stewardship__c/fields/Owner_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Full_Name__c</fullName>
    <description>The full name of the DEP user who is responsible for maintaining the Stewardship process.</description>
    <formula>$User.FirstName + &apos; &apos; + $User.LastName</formula>
    <inlineHelpText>The full name of the business user who is managing the Stewardship process.</inlineHelpText>
    <label>Owner Full Name</label>
    <type>Text</type>
</CustomField>