src/core-crm/objects/Stewardship__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>The date the Plan commenced.</description>
    <inlineHelpText>The date the Plan commenced.</inlineHelpText>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>