src/core-crm/objects/Stewardship__c/fields/Stewardship_Tier__c.field-meta.xml
<CustomField>
    <fullName>Stewardship_Tier__c</fullName>
    <description>The Plan ‘service level’.</description>
    <inlineHelpText>The Plan ‘service level’.</inlineHelpText>
    <label>Stewardship Tier</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>