src/core-crm/objects/Stewardship__c/fields/Stewardship_Type__c.field-meta.xml
<CustomField>
    <fullName>Stewardship_Type__c</fullName>
    <description>The type of Plan being administered for the Contact or Organisation.</description>
    <inlineHelpText>The type of Plan being administered for the Contact or Organisation.</inlineHelpText>
    <label>Stewardship Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>