src/core-crm/objects/Stewardship__c/fields/Total_Donations_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Total_Donations_To_Date__c</fullName>
    <description>The total amount of funds donated by the Contact or Organisation up to the current date.</description>
    <formula>IF( RecordType.DeveloperName  = &apos;Individual_Stewardship&apos;,  Contact__r.Total_Donations_To_Date__c ,  Account__r.Total_Donations_To_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The total amount of funds donated by the Contact or Organisation up to the current date.</inlineHelpText>
    <label>Total Donations To Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>