src/core-crm/objects/Stewardship__c/recordTypes/Individual_Stewardship.recordType-meta.xml
<RecordType>
    <fullName>Individual_Stewardship</fullName>
    <active>true</active>
    <description>Create a Advancement Stewardship plan for an Individual Contact.</description>
    <label>Individual Stewardship</label>
</RecordType>