src/core-crm/objects/Stewardship__c/recordTypes/Organisation_Stewardship.recordType-meta.xml
<RecordType>
    <fullName>Organisation_Stewardship</fullName>
    <active>true</active>
    <description>Create a Advancement Stewardship plan for an Organisation.</description>
    <label>Organisation Stewardship</label>
</RecordType>