src/core-crm/objects/Stewardship__c/validationRules/Completion_Summary_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Completion_Summary_is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND( OR( RecordType.DeveloperName = &apos;Individual_Stewardship&apos;,
RecordType.DeveloperName = &apos;Organisation_Stewardship&apos;),
ISCHANGED(Stage__c),
ISPICKVAL( PRIORVALUE(Stage__c),&apos;Active&apos;),
ISPICKVAL(Stage__c, &apos;Completed&apos;), 
ISBLANK( Completion_Summary__c ))</errorConditionFormula>
    <errorDisplayField>Completion_Summary__c</errorDisplayField>
    <errorMessage>Mandatory field</errorMessage>
</ValidationRule>