src/core-crm/objects/Stewardship__c/listViews/All_Stewardships.listView-meta.xml
<ListView>
    <fullName>All_Stewardships</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Contact__c</columns>
    <columns>Account__c</columns>
    <columns>Stage__c</columns>
    <columns>Owner_Full_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Stewardships</label>
    <sharedTo>
        <group>Donor_Engagement_Manager</group>
    </sharedTo>
</ListView>