src/core-crm/objects/Stewardship__c/listViews/My_Active_Stewardships.listView-meta.xml
<ListView>
    <fullName>My_Active_Stewardships</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Contact__c</columns>
    <columns>Account__c</columns>
    <columns>Stage__c</columns>
    <columns>Owner_Full_Name__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>My Active Stewardships</label>
    <sharedTo>
        <group>Donor_Engagement_Manager</group>
    </sharedTo>
</ListView>